refactor(processor): update method calls and variable names for consistency
- Replace rows.get(0) with rows.getFirst() in DocDocumentProcessor and DocxDocumentProcessor
- Remove redundant break statements in switch cases across OdsWorkbookProcessor
- Simplify column order building logic in OdsWorkbookProcessor
- Rename parameter from scalars to templateToken/templateTokens in OdtDocumentProcessor
- Rename parameter from scalars to templateTokens in PdfDocumentProcessor
- Rename parameter from scalars to templateTokens in PoiWorkbookProcessor
- Rename scalarTokensApplied variable to templateTokensApplied in PoiWorkbookProcessor
- Remove redundant break statements in switch cases in PoiWorkbookProcessor
- Add missing ODS format fixes for token handling and table insertion issues